kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-demo
  labels:
#    istio-injection: enabled
    project: microservice-mesh-with-istio
