kubernetes/backendA-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mesh-demo
  name: backenda
  labels:
    app: backenda
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backenda
      version: v1
  template:
    metadata:
      labels:
        app: backenda
        version: v1
#      annotations:
#        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      containers:
      - name: backenda
        image: douggynix/istio-demo-backend
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          failureThreshold: 25
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: backenda
  namespace: mesh-demo
  labels:
    app: backenda
    service: backenda
spec:
  selector:
    app: backenda
#  type: LoadBalancer
  ports:
  - name: node-tcp
    port: 3001
    protocol: TCP
