kubernetes/backendB-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mesh-demo
  name: backendb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendb
      version: v1
  template:
    metadata:
      labels:
        app: backendb
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      containers:
      - name: backendb
        image: douggynix/istio-demo-backend
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
          protocol: TCP
          name: backendb-port
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          failureThreshold: 30
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: backendb
  namespace: mesh-demo
spec:
  selector:
    app: backendb
    version: v1
#  type: LoadBalancer
  ports:
  - port: 3001
    protocol: TCP
    name: nodejs-port
    targetPort: backend-port
