kubernetes/destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backenda-dest-rule
  namespace: mesh-demo
spec:
  host: backenda
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
#  subsets:
#    - name: v1
#      labels:
#        version: v1
#      trafficPolicy:
