kubernetes/virtualservices.yml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backenda
  namespace: mesh-demo
spec:
  hosts:
  - "*"
  gateways:
    - mesh-demo-gateway
  http:
    - match:
        - uri:
            prefix: "/backendA"
      rewrite:
        uri: "/"
      route:
      - destination:
#          subset: v1
          host: backenda
          port:
            number: 3001
